# edge-creds-pusher

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  lambda.Dockerfile
.github/workflows/: build.yaml
lambda/: Cargo.toml
lambda/src/: config.rs  fastlydict.rs  main.rs  ssm.rs  sts.rs
sam/: README.md  event_cloudwatch.json  template.yaml
